Hardcore grey block fix: map bleed (-1px margin) and container background

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -65,13 +65,13 @@ html {
 
 #map {
 	position: fixed;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	width: 100%;
-	height: 100%;
-	height: var(--vh, 100dvh); /* Force match body height */
+	top: -1px;
+	left: -1px;
+	right: -1px;
+	bottom: -1px;
+	width: calc(100% + 2px);
+	height: calc(100% + 2px);
+	height: calc(var(--vh, 100dvh) + 2px); /* Force match body height + bleed */
 	z-index: 1;
 	background: var(--map-bg);
 }
